add: 3 patterns prototype, observer, strategy